Add desktop entry and plist for application launch configuration; implement DnsLookupProtocol and enhance MysterProtocol with DNS capabilities Add ability to receive myster:// uris that add new prvt types. prvt types are protected by pasword and people are added via new connection section.